   [k_vertigo, hannosch]

1.0.4-devel unreleased
======================

 * Made manage_afterPUT and manage_afterMKCOL use PATH_INFO to get at
   the original id for usage in the Title, so that in a WebDAV
   name-mangling environment the Title gets set to the original
   filename.
   [sidnei]

 * Added test for ATFolder and ATBTreeFolder MKCOL.
   [sidnei]

 * Modify getLocallyAllowedTypes and getImmediatelyAddableTypes to take
   a context in which type creation is to be tested. This is used to determine
   if a user can create a type in the current context instead of in a parent
   folder.
   http://dev.plone.org/plone/ticket/5255
   [wichert]

1.0.3-final 2006-01-20
======================

 * Fixed non-clickable thumbnails in thumbnail view for IE.
   https://trac.plone.org/plone/ticket/5119
   [hannosch]

1.0.2-final 2006-01-03
======================

 * Fixed #5028: constraintypes.py doesn't work properly with PortalFactory when
   acquiring types.
   https://trac.plone.org/plone/ticket/5028
   [panjunyong]

 * fixed styles for thumbnailview.
   [spliter]

 * content/events.py: made event type look-up respect dynamic types.
   [raphael]

 * Don't return "n/a" in get_size(). This fixes Plone's #5030.
   [nouri]

 * Fixed #5026: Setting a ZCatalog sort limit was interfering with result
   batching. Only use the sort_limit optimization when batching is disabled.
   https://trac.plone.org/plone/ticket/5026
   [alecm]

 * Fixed #4567: Added portal_atct method to fix portal_type on CMF objects that
   have empty portal_type because they were incorrectly instantiated. Such
   situations caused migration to fail. This method is available in the type
   migration form, and also runs automatically on install.
   https://trac.plone.org/plone/ticket/4567
   [alecm]

 * Fixed #4937: Removed list criteria from text indices, because it makes no
   sense, AND and OR must be used explicitly.
   http://trac.plone.org/plone/ticket/4937
   [alecm]
