@@ -1,2 +1,2 @@
 [default]
-title = Photo Album Image View
+title = Photo album image view
