@@ -1,2 +1,2 @@
 [default]
-title = Thumbnail View
+title = Thumbnail view
