@@ -1,2 +1,2 @@
 [default]
-title = Smart Folder View
+title = Smart Folder view
