@@ -44,6 +44,15 @@
  * Added test for ATFolder and ATBTreeFolder MKCOL.
    [sidnei]
 
+ * Made manage_afterPUT and manage_afterMKCOL use PATH_INFO to get at
+   the original id for usage in the Title, so that in a WebDAV
+   name-mangling environment the Title gets set to the original
+   filename.
+   [sidnei]
+
+ * Added test for ATFolder and ATBTreeFolder MKCOL.
+   [sidnei]
+
  * Modify getLocallyAllowedTypes and getImmediatelyAddableTypes to take
    a context in which type creation is to be tested. This is used to determine
    if a user can create a type in the current context instead of in a parent
